Build 'zc' with 'tcc' in 'ci.yml'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,8 @@ jobs:
 
     - name: Build
       run: |
-        if [ "${{ matrix.cc }}" = "zig cc" ] || [ "${{ matrix.cc }}" = "tcc" ]; then
-           make  # Build zc with default CC (stable), but test zc using zig cc/tcc backend
+        if [ "${{ matrix.cc }}" = "zig cc" ]; then
+           make  # Build zc with default CC (stable), but test zc using zig cc backend
         else
            make CC="${{ matrix.cc }}"
         fi
